cmake_minimum_required(VERSION 3.5)
project(made)
set (CMAKE_CXX_STANDARD 11)


### Задачи
add_executable(task_1 Algorithms/task_1.cpp)
add_executable(task_2 Algorithms/task_2.cpp)
add_executable(task_3 Algorithms/task_3.cpp)



### Семинары
add_executable(seminar_2 Algorithms/seminar_2.cpp)
add_executable(seminar_3 Algorithms/seminar_3.cpp)

